--- a/home.html
+++ b/home.html
@@ -71,7 +71,7 @@
               <div class="container">
                 <div class="carousel-caption text-end">
                   <h1>Success</h1>
-                  <p class="font">Lets build a succefull career together</p>
+                  <p class="font">Lets build a successful career together</p>
                   
                 </div>
               </div>
